--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,2 @@
-/env
-local_settings.py
-*.pyc
-.project
-.settings/
-.pydevproject
 .idea/
-db.sqlite3
-env.sh
-.coverage
-htmlcov/
-/static/
-.env
+/project/
