--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,7 @@ machine:
 
 test:
   pre:
+    - pip install -r requirements.txt
     - cookiecutter . --no-input
     - pip install -r project/requirements.txt
   override:
