--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,56 @@
-# dev
+amqp==1.4.9
+anyjson==0.3.3
+appdirs==1.4.3
+appnope==0.1.0
 beautifulsoup4==4.4.1
+billiard==3.3.0.23
 celery==3.1.23
+coverage==4.1
+decorator==4.0.11
+defusedxml==0.5.0
 Django==1.10.5
-djangorestframework==3.5.3
 django-allauth==0.25.2
+django-appconf==1.0.2
 django-celery-email==1.1.4
 django-environ==0.4.0
 django-extensions==1.6.7
-django-rest-auth==0.9.0
-psycopg2==2.6.1
-
-
-# test
-coverage==4.1
 django-nose==1.4.4
+django-rest-auth==0.9.0
+djangorestframework==3.5.3
+djangorestframework-jwt==1.10.0
 factory-boy==2.7.0
 fake-factory==0.5.7
+flake8==3.2.1
 gunicorn==19.6.0
 ipdb==0.10.0
+ipython==6.0.0
+ipython-genutils==0.2.0
+jedi==0.10.2
+kombu==3.0.37
+mccabe==0.5.3
+nose==1.3.7
 nose-timer==0.6.0
-flake8==3.2.1
+oauthlib==2.0.2
+packaging==16.8
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.14
+psycopg2==2.6.1
+ptyprocess==0.5.1
+pycodestyle==2.2.0
+pyflakes==1.3.0
+Pygments==2.2.0
+PyJWT==1.5.0
+pyparsing==2.2.0
+python-dateutil==2.6.0
+python3-openid==3.1.0
+pytz==2017.2
+requests==2.13.0
+requests-oauthlib==0.8.0
 selenium==2.53.2
+simplegeneric==0.8.1
+six==1.10.0
+termcolor==1.1.0
+traitlets==4.3.2
+wcwidth==0.1.7
 whitenoise==3.1
