--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ python3-openid==3.1.0
 pytz==2017.2
 requests==2.13.0
 requests-oauthlib==0.8.0
+rest-condition==1.0.3
 selenium==2.53.2
 simplegeneric==0.8.1
 six==1.10.0
